# P4

./: README.md
Object and Blob/BlobDetection/: BlobAnalysis  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Object and Blob/BlobDetection/src/: BlobAnalysis.cpp  BlobOnlyGreen.cpp  OpenCV_simpleBlobDetection.cpp
Object and Blob/src/: BlobAnalysis.cpp
handler/: CMakeLists.txt  package.xml
handler/msg/: Setup.msg  object_pos.h  object_pos.msg
handler/src/: handler.cpp  test_node.cpp
kinova-ros/kinova_demo/: CMakeLists.txt  package.xml  setup.py
kinova-ros/kinova_msgs/msg/: KinovaPose.msg
librealsense/: readme.md
realsense/: CMakeLists.txt  package.xml
realsense_camera/: CMakeLists.txt
realsense_camera/src/: img_proc.cpp
realsense_zr300/: CMakeLists.txt  FindEigen3.cmake  package.xml
realsense_zr300/src/: realsense_zr300_node.cpp
rupee_app/: CMakeLists.txt  mainpage.dox  package.xml
rupee_app/include/testing/: newstuff.hpp  (+2 more)
rupee_app/launch/: rupee_app.launch
rupee_app/src/: main.cpp  newstuff.cpp  progress.cpp
rupee_app/ui/: newstuff.ui  progress.ui
rupee_controller/: CMakeLists.txt  package.xml
rupee_controller/scripts/: rupee_controller.py
rupee_msgs/: CMakeLists.txt  package.xml
rupee_msgs/msg/: Setup.msg  camera.msg  object_pos.msg
testing/: CMakeLists.txt  README.md  package.xml
testing/include/testing/: newstuff.hpp  progress.hpp  qnode.hpp  thread.hpp
testing/launch/: gui.launch
testing/msg/: Setup.h
testing/src/: main.cpp  newstuff.cpp  progress.cpp  qnode.cpp
testing/ui/: newstuff.ui  progress.ui
(+11 files in other folders)
